<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/cartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cartItemsCount" />

        <TextView
            android:id="@+id/cartItemsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4 items"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RecyclerView for cart items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/orderSummarySection"
        android:clipToPadding="false"
        android:clipChildren="false" />

    <!-- Order Summary Section -->
    <LinearLayout
        android:id="@+id/orderSummarySection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24sp"
            android:text="@string/order_summary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="Items"
                    android:textColor="@color/title_color"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="Delivery"
                    android:textColor="@color/title_color"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Services"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/title_color"
                    android:gravity="start"
                    android:textSize="16sp"
                    android:textStyle="normal"/>



            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_base_fare_amt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="4"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_distance_amt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="N5000"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:textStyle="normal"/>


                <TextView
                    android:id="@+id/tv_time_amt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="N3500"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:textStyle="normal"/>




            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/layout_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do you have a Coupon Code?"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="224dp"
                    android:layout_height="44dp"
                    android:hint="@string/enter_coupon_code"
                    android:padding="8dp"
                    android:background="@drawable/tab_card" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="68dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_green_500"
                    android:background="@drawable/button_bg"
                    android:text="@string/apply" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sub Total"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N 780,000"
                android:layout_marginTop="10dp"
                android:textColor="@color/primary_green_500"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="160dp"
            android:layout_height="58dp"
            android:layout_marginStart="140dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/primary_green_500"
            android:text="@string/proceed_to_checkout"
            android:textColor="@color/White"
            android:textSize="10sp" />
    </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
