<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:endIconDrawable="@drawable/search_ic"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/search_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/search_ic"
            app:endIconMode="custom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/alert_icon"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tab_card"
                android:hint="Search for anything"
                android:inputType="text"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/alert_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="Alert"
            android:src="@drawable/alert_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cart_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cart_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="Cart"
            android:padding="5dp"
            android:src="@drawable/cart_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="Banner Image"
        android:scaleType="centerCrop"
        android:src="@drawable/top_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <!-- ScrollView to hold the store items -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/bottomTab"
        app:layout_constraintTop_toBottomOf="@id/banner_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- New Arrivals Section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="New Arrivals"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:text="See more"
                    android:textColor="@color/previous"
                    android:textSize="16sp" />
            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_new_arrivals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal" />

            <!-- Top Sellers Section -->
            <RelativeLayout
                android:id="@+id/resendOtpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="Top Sellers"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/resendOtpTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:text="See more"
                    android:textColor="@color/previous"
                    android:textSize="16sp" />
            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_top_sellers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal" />

            <!-- More of What You Like Section -->
            <RelativeLayout
                android:id="@+id/moreLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="More of what you like"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:text="See more"
                    android:textColor="@color/previous"
                    android:textSize="16sp" />
            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_more_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/bottomTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_card"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabIconTint="@color/shared_trip_text"
        app:tabIndicatorColor="@color/previous"
        app:tabSelectedTextColor="@color/previous"
        app:tabTextColor="@color/shared_trip_text">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/storeTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/store_ic"
            android:text="@string/store" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/likedTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/liked_ic"
            android:text="@string/Liked" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ordersTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/order"
            android:text="@string/Orders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/accountTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/account"
            android:text="@string/account" />

    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
